--- a/components/scream/tests/coupled/dynamics_physics/model_restart/model_restart_output.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/model_restart/model_restart_output.yaml
@@ -71,9 +71,9 @@ Fields:
 output_control:
   MPI Ranks in Filename: true
   Frequency: 2
-  Frequency Units: Steps
+  frequency_units: Steps
 Checkpoint Control:
   MPI Ranks in Filename: true
   Frequency: 1
-  Frequency Units: Steps
+  frequency_units: Steps
 ...
