--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -55,7 +55,7 @@ Fields:
       - PotentialTemperature
 output_control:
   Frequency: ${HIST_N}
-  Frequency Units: ${HIST_OPTION}
+  frequency_units: ${HIST_OPTION}
   MPI Ranks in Filename: false
   Timestamp in Filename: true
   AVG Type in Filename: false
