--- a/components/scream/src/share/io/tests/io_test_instant.yaml
+++ b/components/scream/src/share/io/tests/io_test_instant.yaml
@@ -7,5 +7,5 @@ Field Names: [field_1, field_2, field_3, field_packed, DummyDiagnostic]
 output_control:
   MPI Ranks in Filename: true
   Frequency: 10
-  Frequency Units: Steps
+  frequency_units: Steps
 ...
