--- a/components/scream/tests/uncoupled/p3/p3_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/p3/p3_standalone_output.yaml
@@ -25,7 +25,7 @@ Field Names:
   - micro_vap_ice_exchange
 output_control:
   Frequency: ${NUM_STEPS}
-  Frequency Units: Steps
+  frequency_units: Steps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
 ...
