--- a/components/scream/tests/uncoupled/rrtmgp/rrtmgp_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/rrtmgp_standalone_output.yaml
@@ -20,7 +20,7 @@ Field Names:
  
 output_control:
   Frequency: ${NUM_STEPS}
-  Frequency Units: Steps
+  frequency_units: Steps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
 ...
