--- a/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
+++ b/components/scream/tests/uncoupled/spa/spa_standalone_output.yaml
@@ -11,7 +11,7 @@ Field Names:
   - nccn
 output_control:
   Frequency: ${NUM_STEPS}
-  Frequency Units: Steps
+  frequency_units: Steps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
 ...
