--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -58,6 +58,6 @@ output_control:
   frequency_units: ${HIST_OPTION}
   MPI Ranks in Filename: false
   Timestamp in Filename: true
-  AVG Type in Filename: false
+  avg_type_in_filename: false
   Frequency in Filename: false
 ...
