--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -59,5 +59,5 @@ output_control:
   MPI Ranks in Filename: false
   Timestamp in Filename: true
   avg_type_in_filename: false
-  Frequency in Filename: false
+  frequency_in_filename: false
 ...
