--- a/components/scream/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input.yaml
@@ -3,7 +3,7 @@
 # This input file is for a free-standing rrtmgp test that runs using initial conditions read from a SCREAMv0 run
 Debug:
   atmosphere_dag_verbosity_level: 5
-  Atm Log Level: debug
+  atm_log_level: debug
 
 Time Stepping:
   Time Step: ${ATM_TIME_STEP}
