--- a/components/scream/src/share/io/tests/io_test_template.yaml
+++ b/components/scream/src/share/io/tests/io_test_template.yaml
@@ -4,8 +4,8 @@ Casename: io_output_test
 Averaging Type: DUMMY_STRING
 Max Snapshots Per File: 1
 Field Names: [field_1, field_2, field_3, field_packed, DummyDiagnostic]
-Output Control:
+output_control:
   MPI Ranks in Filename: true
   Frequency: 10
-  Frequency Units: DUMMY_STRING
+  frequency_units: DUMMY_STRING
 ...
