--- a/components/scream/tests/uncoupled/rrtmgp/CMakeLists.txt
+++ b/components/scream/tests/uncoupled/rrtmgp/CMakeLists.txt
@@ -42,16 +42,22 @@ if (NOT SCREAM_BASELINES_ONLY)
 
   ## Add a standalone test with chunked columns, and compare against non-chunked
   set (SUFFIX "_chunked")
-  set (COL_CHUNK_SIZE 50)
+  math (EXPR COL_PER_RANK "218 / ${TEST_RANK_END}")
+  math (EXPR COL_CHUNK_SIZE "${COL_PER_RANK} / 2")
+  if (COL_CHUNK_SIZE LESS 1)
+    message (FATAL_ERROR "Error! Chunk size for rrtmgp unit test is less than 1.")
+  endif()
+
   configure_file (input.yaml input_chunked.yaml)
   configure_file (rrtmgp_standalone_output.yaml rrtmgp_standalone_output_chunked.yaml)
+  # Compute the chunk size, given number or ranks
   CreateUnitTestFromExec(
       rrtmgp_standalone_chunked rrtmgp_standalone
       LABELS ${TEST_LABELS}
       MPI_RANKS ${TEST_RANK_END}
       EXE_ARGS "--ekat-test-params inputfile=input_chunked.yaml"
       PROPERTIES FIXTURES_SETUP rrtmgp_chunked_generate_output
-      PASS_REGULAR_EXPRESSION "(beg.end: 50, 100)"
+      PASS_REGULAR_EXPRESSION "(beg.end: 0, ${COL_CHUNK_SIZE})"
   )
 
   # Compare chunked vs non-chunked radiation
