--- a/components/scream/src/share/io/CMakeLists.txt
+++ b/components/scream/src/share/io/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SCREAM_SCORPIO_SRCS
 # Create io lib
 add_library(scream_io ${SCREAM_SCORPIO_SRCS})
 set_target_properties(scream_io PROPERTIES Fortran_MODULE_DIRECTORY ${SCREAM_F90_MODULES})
-target_link_libraries(scream_io PUBLIC scream_share diagnostics piof pioc)
+target_link_libraries(scream_io PUBLIC scream_share diagnostics piof)
 target_compile_options(scream_io PUBLIC $<$<COMPILE_LANGUAGE:Fortran>:${SCREAM_Fortran_FLAGS}>)
 
 if (SCREAM_CIME_BUILD)
