--- a/components/scream/tests/uncoupled/homme/CMakeLists.txt
+++ b/components/scream/tests/uncoupled/homme/CMakeLists.txt
@@ -62,7 +62,7 @@ GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
 ## Finally compare all MPI rank output files against the single rank output as a baseline, using CPRNC
 ## Only if running with 2+ ranks configurations
 # This test requires CPRNC
-if (TEST_RANK_START GREATER TEST_RANK_END)
+if (TEST_RANK_END GREATER TEST_RANK_START)
   include (BuildCprnc)
   BuildCprnc()
   set (BASE_TEST_NAME "homme")
