--- a/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
+++ b/components/scream/tests/uncoupled/rrtmgp/input_unit.yaml
@@ -15,6 +15,8 @@ atmosphere_processes:
     orbital_mvelp: 0
     Fixed Solar Zenith Angle: 0.86
     do_aerosol_rad: false
+    nswgpts: 224
+    nlwgpts: 256
     rrtmgp_coefficients_file_sw: ${SCREAM_DATA_DIR}/init/rrtmgp-data-sw-g224-2018-12-04.nc
     rrtmgp_coefficients_file_lw: ${SCREAM_DATA_DIR}/init/rrtmgp-data-lw-g256-2018-12-04.nc
     rrtmgp_cloud_optics_file_sw: ${SCREAM_DATA_DIR}/init/rrtmgp-cloud-optics-coeffs-sw.nc
