--- a/components/scream/src/share/io/tests/io_test_template.yaml
+++ b/components/scream/src/share/io/tests/io_test_template.yaml
@@ -3,7 +3,15 @@
 Casename: io_output_test
 Averaging Type: DUMMY_STRING
 Max Snapshots Per File: 1
-Field Names: [field_1, field_2, field_3, field_packed, DummyDiagnostic]
+Field Names:
+  - field_1
+  - field_2
+  - field_3
+  - field_packed
+  - field_3@bot
+  - field_3@top
+  - field_3@lev_2
+  - DummyDiagnostic
 output_control:
   MPI Ranks in Filename: true
   Frequency: 10
