Add cloud area outputs to defaults

--- a/components/scream/data/scream_default_output.yaml
+++ b/components/scream/data/scream_default_output.yaml
@@ -48,6 +48,10 @@ Fields:
       - SW_flux_up
       - sfc_flux_lw_dn
       - sfc_flux_sw_net
+      - cldtot
+      - cldlow
+      - cldmed
+      - cldhgh
       # Surface Fluxes
       - surf_evap
       - surf_sens_flux
